--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,13 @@
         "php": "^8.1",
         "bezhansalleh/filament-shield": "^3.2",
         "filament/filament": "^3.0-stable",
+        "google/cloud-ai-platform": "^1.0",
         "google/cloud-vision": "^1.9",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "php-ai/php-ml": "^0.10.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
